--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,20 +46,14 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
 
-rich = "^13.3.3"
-arrow = "^1.2.3"
-markdown2 = "^2.4.8"
 msgpack = "^1.0.5"
 pyyaml = "^6.0"
-inquirer = "^3.1.3"
-toml = "^0.10.2"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
-inquirer = "^3.1.3"
 isort = "^5.12.0"
 mako = "^1.2.4"
 mdformat = "^0.7.16"
@@ -82,6 +76,9 @@ pillow = "^10.0.0"
 cairosvg = "^2.7.1"
 mkdocs-material = {version = "^9.2.0b3", allow-prereleases = true}
 twine = "^4.0.2"
+python-inquirer = "^1.0.3"
+inquirer = "^3.1.3"
+toml = "^0.10.2"
 
 [tool.mypy]
 disable_error_code = ["import", "attr-defined", "no-untyped-call"]
