--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-################################################################################
+chro################################################################################
 #                                 USER DEFINED                                 #
 ################################################################################
 
